--- a/sam-database/package.json
+++ b/sam-database/package.json
@@ -2,6 +2,7 @@
   "name": "sam-database",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
