--- a/sam-database/package.json
+++ b/sam-database/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8"
