--- a/sam-database/package.json
+++ b/sam-database/package.json
@@ -5,6 +5,7 @@
   "homepage": ".",
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "create-react-class": "^15.6.3",
     "gh-pages": "^2.0.1",
     "jquery": "^3.4.0",
     "react": "^16.8.6",
