--- a/sam-database/package.json
+++ b/sam-database/package.json
@@ -10,6 +10,7 @@
     "jquery": "^3.4.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.6",
+    "react-datepicker": "^2.4.0",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8"
