--- a/sam-database/package.json
+++ b/sam-database/package.json
@@ -8,6 +8,7 @@
     "create-react-class": "^15.6.3",
     "gh-pages": "^2.0.1",
     "jquery": "^3.4.0",
+    "lodash.isequal": "^4.5.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.6",
     "react-datepicker": "^2.4.0",
